--- a/mouse hover animate/index2.html
+++ b/mouse hover animate/index2.html
@@ -1,56 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
     <style type="text/css">
-        .box{
-    background:#fe7253;
-    width:360px;height:240px;
-    padding:0;margin:0;
-    border:1px solid #000;
-    position:relative;box-sizing:border-box;
-    -webkit-transition:all .4s ease-in-out;
-    -moz-transition:all .4s ease-in-out;
-    -o-transition:all .4s ease-in-out;
-    -ms-transition:all .4s ease-in-out;
-    transition:all .4s ease-in-out;
-    overflow:hidden
-}
-        .box .caption{
-    color:#fff;
-    padding:0;
-    margin:0;
-    -moz-backface-visibility:hidden;
-    -webkit-backface-visibility:hidden;
-    backface-visibility:hidden;
-    -webkit-transition:all .4s ease-in-out;
-    -moz-transition:all .4s ease-in-out;
-    -o-transition:all .4s ease-in-out;
-    -ms-transition:all .4s ease-in-out;
-    transition:all .4s ease-in-out;
-    overflow:hidden
-}
+      .box {
+        background: #fe7253;
+        width: 360px;
+        height: 240px;
+        padding: 0;
+        margin: 0;
+        border: 1px solid #000;
+        position: relative;
+        box-sizing: border-box;
+        -webkit-transition: all 0.4s ease-in-out;
+        -moz-transition: all 0.4s ease-in-out;
+        -o-transition: all 0.4s ease-in-out;
+        -ms-transition: all 0.4s ease-in-out;
+        transition: all 0.4s ease-in-out;
+        overflow: hidden;
+      }
+      .box .caption {
+        color: #fff;
+        padding: 0;
+        margin: 0;
+        -moz-backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        -webkit-transition: all 0.4s ease-in-out;
+        -moz-transition: all 0.4s ease-in-out;
+        -o-transition: all 0.4s ease-in-out;
+        -ms-transition: all 0.4s ease-in-out;
+        transition: all 0.4s ease-in-out;
+        overflow: hidden;
+      }
 
-        .box .caption::before{
-    top:8%;right:10%;bottom:8%;left:10%;
-    border-top:1px solid #fff;
-    border-bottom:1px solid #fff;
-    -webkit-transform:scale(0,1);-moz-transform:scale(0,1);
-    -o-transform:scale(0,1);transform:scale(0,1);
-    -webkit-transform-origin:0 0;
-    -moz-transform-origin:0 0;
-    -o-transform-origin:0 0;
-    transform-origin:0 0
-}
+      .box .caption::before {
+        top: 8%;
+        right: 10%;
+        bottom: 8%;
+        left: 10%;
+        border-top: 1px solid #fff;
+        border-bottom: 1px solid #fff;
+        -webkit-transform: scale(0, 1);
+        -moz-transform: scale(0, 1);
+        -o-transform: scale(0, 1);
+        transform: scale(0, 1);
+        -webkit-transform-origin: 0 0;
+        -moz-transform-origin: 0 0;
+        -o-transform-origin: 0 0;
+        transform-origin: 0 0;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="box">
-        <div class="caption">
-
-        </div>
+      <div class="caption"></div>
     </div>
-
-</body>
+  </body>
 </html>
